# cat198x

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPECIFICATION.md  clippy.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
decisions/: NEXT-STEPS.md  agent-native-surface-and-ui.md  concurrent-apply.md  declarative-reconciliation.md  draining-consume-staging-containers.md  hash-storage-multi-format.md  skeleton-lint-adaptations.md  source-disposition.md
scripts/: coverage-gate.sh  coverage.sh
src/: error.rs  lib.rs  main.rs  ops.rs  util.rs
src/archive/: mod.rs  writer.rs
src/cli/: apply.rs  catalogue.rs  clean_superseded.rs  config.rs  dat.rs  doctor.rs  export.rs  fetch.rs  init.rs  mcp.rs  mod.rs  plan.rs  prune.rs  quarantine.rs  reclaim.rs  scan.rs  source.rs  stats.rs  status.rs  torrent.rs  unknowns.rs  update.rs
src/config/: mod.rs  types.rs
src/dat/: clrmamepro.rs  mod.rs  parser.rs  types.rs  zxdb.rs
src/db/: collections.rs  config.rs  dats.rs  files.rs  mod.rs  quarantine.rs  schema.rs  schema_v1.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql  schema_v5.sql
src/filter/: mod.rs  parser.rs  preferences.rs
src/plan/: apply.rs  executor.rs  generator.rs  log.rs  mod.rs  types.rs
src/scanner/: archive.rs  chd.rs  hasher.rs  header.rs  mod.rs
tests/: integration_test.rs
ui/: .gitignore  Cargo.toml  README.md  tauri.conf.json
ui/capabilities/: default.json
ui/frontend/: index.html  main.js  styles.css
ui/src/: main.rs
