[package]
name = "cat198x"
version = "0.3.0"
edition = "2024"
description = "A cross-platform CLI for managing retro gaming ROM collections"
license = "MIT"
repository = "https://github.com/cat198x/cat198x"
keywords = ["rom", "retro", "gaming", "dat", "mame"]
categories = ["command-line-utilities", "games"]

[lints]
workspace = true

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# XML parsing (streaming for large DAT files)
quick-xml = "0.40"

# Hashing
sha1 = "0.11"
sha2 = "0.11"
md-5 = "0.11"
crc32fast = "1.4"

# Archive support
# Deflate-only: ROM-set zips are always Stored or Deflated, so we skip
# zip's default zstd/bzip2/lzma/aes codecs (and their C dependency,
# zstd-sys) to keep cross-compiled release builds lean.
zip = { version = "8", default-features = false, features = ["deflate"] }
sevenz-rust2 = "0.21"

# File system
walkdir = "2"

# Parallel processing
rayon = "1.10"

# Progress indication
indicatif = "0.18"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# DateTime handling
chrono = "0.4"

# Signal handling
ctrlc = "3.4"

# Self-update from GitHub releases
self_update = { version = "0.44", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# HTTP client for DAT fetching
reqwest = { version = "0.13", features = ["blocking"] }

# Torrent file creation and verification
lava_torrent = "0.11"

# Platform-appropriate directories
directories = "6"

# Temp directory for archive extraction
tempfile = "3"

# Cross-platform free-disk-space query (wraps statvfs / GetDiskFreeSpaceExW
# without unsafe in our code, so the crate keeps unsafe_code = "forbid").
fs4 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

# --- 198x standard project skeleton (see ../../decisions/project-skeleton-standard.md) ---
# Single-package workspace root: the skeleton's quality gates, profiles, and
# release config live in workspace tables so this crate matches the rest of the
# 198x family and can grow into a multi-crate workspace later.
[workspace]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"

[profile.dev]
# Line tables give backtraces without the full-debuginfo link tax — the
# biggest cargo test cost once a workspace grows many test binaries.
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1

# cargo-dist release configuration. On a `v*` tag push (created by release-plz
# when its release PR merges), .github/workflows/release.yml builds the cat198x
# CLI for each target and attaches archives to a GitHub Release. Regenerate that
# workflow with `dist generate` after editing this section.
[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"

[profile.dist]
inherits = "release"
lto = "thin"
